[gd_scene load_steps=7 format=3 uid="uid://sjko7n65lhpb"]

[ext_resource type="Script" path="res://levels/hub/section_nodes/hub_panel.gd" id="1_rfpe5"]
[ext_resource type="Texture2D" uid="uid://bpp6eajjxo4pl" path="res://textures/3-VAR1_1.webp" id="2_016ii"]
[ext_resource type="Texture2D" uid="uid://wrxac3q4r5nq" path="res://textures/8164.webp" id="3_cwi4u"]

[sub_resource type="Animation" id="Animation_12g6a"]
resource_name = "scroll_down"
length = 0.133335
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiddlePanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 3.5, 2.08165e-12), Vector3(2.08165e-12, 0.5, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MiddlePanel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.3, 0.3, 0.3), Vector3(0.2, 0.2, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 6.5, 2.08165e-12), Vector3(2.08165e-12, 3.5, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UpperPanel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.2, 0.2, 0.2), Vector3(0.3, 0.3, 0.3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LowerPanel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 0.5, 2.08165e-12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LowerPanel:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.2, 0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_t27xe"]
resource_name = "scroll_up"
length = 0.133335
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiddlePanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 3.5, 2.08165e-12), Vector3(2.08165e-12, 6.5, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MiddlePanel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.3, 0.3, 0.3), Vector3(0.2, 0.2, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 6.5, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UpperPanel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.2, 0.2, 0.2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LowerPanel:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 0.5, 2.08165e-12), Vector3(2.08165e-12, 3.5, 2.08165e-12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LowerPanel:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.2, 0.2, 0.2), Vector3(0.3, 0.3, 0.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u61u2"]
_data = {
"scroll_down": SubResource("Animation_12g6a"),
"scroll_up": SubResource("Animation_t27xe")
}

[node name="hub_panel" type="Node3D"]
script = ExtResource("1_rfpe5")

[node name="UpperPanel" type="Sprite3D" parent="."]
transform = Transform3D(-8.74228e-09, -6.97573e-17, -0.2, 6.97573e-17, 0.2, -6.97573e-17, 0.2, -6.97573e-17, -8.74228e-09, 2.08165e-12, 6.5, 2.08165e-12)
texture = ExtResource("2_016ii")

[node name="MiddlePanel" type="Sprite3D" parent="."]
transform = Transform3D(-1.31134e-08, -1.04636e-16, -0.3, 1.04636e-16, 0.3, -1.04636e-16, 0.3, -1.04636e-16, -1.31134e-08, 2.08165e-12, 3.5, 2.08165e-12)
texture = ExtResource("3_cwi4u")

[node name="LowerPanel" type="Sprite3D" parent="."]
transform = Transform3D(-8.74228e-09, -6.97574e-17, -0.2, 6.97574e-17, 0.2, -6.97574e-17, 0.2, -6.97574e-17, -8.74228e-09, 2.08165e-12, 0.5, 2.08165e-12)
texture = ExtResource("2_016ii")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u61u2")
}
